[gd_scene load_steps=17 format=3 uid="uid://c0ie7iphymwhi"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_2eb44"]
[ext_resource type="Texture2D" uid="uid://cuh5gwn8ywb42" path="res://art/walkDown.png" id="2_p5c0r"]
[ext_resource type="Texture2D" uid="uid://cn8i255km6vvw" path="res://art/walkUp.png" id="3_jw7ps"]
[ext_resource type="Texture2D" uid="uid://4h3dfea7ix6c" path="res://art/walkRight.png" id="4_2yydd"]
[ext_resource type="Texture2D" uid="uid://50y1ixo8nxty" path="res://art/idle-all.png" id="6_isnff"]

[sub_resource type="Animation" id="Animation_6qpcg"]
resource_name = "walkDown"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("walkDown:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_udyk6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("walkUp:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("walkDown:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("walkRight:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("walkLeft:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Idle:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Idle:flip_h")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ojxpw"]
resource_name = "walkUp"
length = 0.9
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("walkUp:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 7]
}

[sub_resource type="Animation" id="Animation_ycje2"]
resource_name = "walkRight"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("walkRight:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}

[sub_resource type="Animation" id="Animation_ytkue"]
resource_name = "walkLeft"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("walkLeft:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}

[sub_resource type="Animation" id="Animation_20rrg"]
resource_name = "idle"
length = 0.6
loop_mode = 1
step = 0.2

[sub_resource type="Animation" id="Animation_puc67"]
resource_name = "idleRight"
length = 0.6
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Idle:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, false, false]
}

[sub_resource type="Animation" id="Animation_vbkgd"]
resource_name = "idleLeft"
length = 0.6
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Idle:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, true, true]
}

[sub_resource type="Animation" id="Animation_v8nw8"]
resource_name = "idleUp"
length = 0.6
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [6, 7, 8]
}

[sub_resource type="Animation" id="Animation_bqyy6"]
resource_name = "idleDown"
length = 0.6
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dlej5"]
_data = {
"RESET": SubResource("Animation_udyk6"),
"idle": SubResource("Animation_20rrg"),
"idleDown": SubResource("Animation_bqyy6"),
"idleLeft": SubResource("Animation_vbkgd"),
"idleRight": SubResource("Animation_puc67"),
"idleUp": SubResource("Animation_v8nw8"),
"walkDown": SubResource("Animation_6qpcg"),
"walkLeft": SubResource("Animation_ytkue"),
"walkRight": SubResource("Animation_ycje2"),
"walkUp": SubResource("Animation_ojxpw")
}

[node name="Player" type="CharacterBody2D"]
texture_filter = 1
script = ExtResource("1_2eb44")
speed = 50

[node name="walkDown" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -16)
scale = Vector2(1, 1.02648)
texture = ExtResource("2_p5c0r")
offset = Vector2(0, 2.08165e-12)
hframes = 8
region_enabled = true
region_rect = Rect2(-8, 248, 512, 64)

[node name="walkUp" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -16)
texture = ExtResource("3_jw7ps")
hframes = 8
region_enabled = true
region_rect = Rect2(-8, 312, 512, 64)

[node name="walkRight" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -16)
texture = ExtResource("4_2yydd")
offset = Vector2(2.08165e-12, 2)
hframes = 10
region_enabled = true
region_rect = Rect2(-8, 192, 640, 48)

[node name="walkLeft" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -16)
texture = ExtResource("4_2yydd")
offset = Vector2(2.08165e-12, 2.08165e-12)
flip_h = true
hframes = 10
region_enabled = true
region_rect = Rect2(-8, 192, 640, 48)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dlej5")
}

[node name="Idle" type="Sprite2D" parent="."]
position = Vector2(2.08165e-12, -13)
texture = ExtResource("6_isnff")
flip_h = true
hframes = 3
vframes = 3
frame = 3
region_enabled = true
region_rect = Rect2(-8, -8, 192, 192)
